@@ -58,7 +58,7 @@ class db_code extends db_file
 	
 	static function init()
 	{
-		include_once 'Text' . DIRECTORY_SEPARATOR . 'Highlighter.php';
+		include_once setting('local_root') . 'include' . DIRECTORY_SEPARATOR . 'geshi' . DIRECTORY_SEPARATOR . 'geshi.php';
 	}
 
 	static function columns()
@@ -82,60 +82,336 @@ class db_code extends db_file
 		$file = str_replace('\\', '/', $file);
 		if(setting('use_alias') == true) $file = preg_replace($GLOBALS['alias_regexp'], $GLOBALS['paths'], $file);
 		
-		$ext = getExt(basename($file));
 		$type = getExtType($file);
 		
-		return ( self::getLanguage($ext) || $type == 'text' );
+		return ( self::getLanguage(basename($file)) || $type == 'text' );
 	}
 
-	static function getLanguage($ext)
+	static function getLanguage($file)
 	{
-		switch($ext)
+		switch($file)
 		{
+			case 'error.log':
+			case 'access.log':
+			case 'other_vhosts_access.log':
+				return 'apache';
+				break;
+			case 'sources.list':
+				return 'apt_sources';
+				break;
+			case 'robots.txt':
+				return 'robots';
+				break;
+			case 'xorg.conf':
+				return 'xorg_conf';
+				break;
+		}
+		
+		switch(getExt($file))
+		{
+			case 'as':
+				return 'actionscript';
+				break;
+			case 'abap':
+				return 'abap';
+				break;
+			case 'a':
+				return 'ada';
+				break;
+			case 'applescript':
+				return 'applescript';
+				break;
+			case 'x86':
+			case 'asm':
+				return 'asm';
+				break;
+			case 'm68k':
+				return 'm68k';
+				break;
+			case 'pic16':
+				return 'pic16';
+				break;
+			case 'z80':
+				return 'z80';
+				break;
+			case 'log':
+				return 'apache';
+				break;
+			case 'list':
+				return 'apt_sources';
+				break;
+			case 'asp':
+			case 'aspx':
+				return 'asp';
+				break;
+			case 'aut':
+				return 'autoit';
+				break;
+			case 'abnf':
+			case 'bnf':
+				return 'bnf';
+				break;
+			case 'sh':
+			case 'bash':
+				return 'bash';
+				break;
+			case 'bgm':
+				return 'basic4gl';
+				break;
+			case 'bb':
+				return 'blitzbasic';
+				break;
+			case 'b':
+			case 'bf':
+				return 'bf';
+				break;
 			case "c":
 			case "h":
 			case "cpp":
 				return 'cpp';
 				break;
+			case "cs":
+			case "csharp":
+				return 'csharp';
+				break;
+			case "dcl":
+				return 'caddcl';
+				break;
+			case "lsp":
+				return 'cadlisp';
+				break;
+			case "cfdg":
+				return 'cfdg';
+				break;
+			case "cil":
+				return 'cil';
+				break;
+			case "cob":
+			case "cbl":
+			case "cobol":
+				return 'cobol';
+				break;
 			case "css":
 				return 'css';
 				break;
-			case "dtd":
-				return 'dtd';
+			case "d":
+				return 'd';
+				break;
+			case "pas":
+			case "dpr":
+				return 'delphi';
+				break;
+			case "patch":
+			case "diff":
+				return 'diff';
+				break;
+			case "batch":
+				return 'dos';
+				break;
+			case "dot":
+				return 'dot';
+				break;
+			case "eff":
+				return 'eiffel';
+				break;
+			case "f77":
+			case "f95":
+			case "ftn":
+				return 'fortran';
+				break;
+			case "4gl":
+				return 'genero';
+				break;
+			case "fbl":
+				return 'freebasic';
+				break;
+			case "mo":
+				return 'gettext';
+				break;
+			case "glsl":
+				return 'glsl';
+				break;
+			case "gml":
+				return 'gml';
+				break;
+			case "plt":
+				return 'gnuplot';
+				break;
+			case "groovy":
+				return 'groovy';
+				break;
+			case "gs":
+			case "hs":
+				return 'haskell';
+				break;
+			case "hq9+":
+				return 'hq9plus';
 				break;
 			case "htm":
 			case "html":
 				return 'html';
 				break;
+			case "ini":
+				return 'ini';
+				break;
+			case "ino":
+			case "myp":
+				return 'inno';
+				break;
+			case "i":
+				return 'intercal';
+				break;
+			case "io":
+				return 'io';
+				break;
 			case "java":
 				return 'java';
 				break;
 			case "js":
+			case "javascript":
 				return 'javascript';
+				break;
+			case "kix":
+				return 'kixtart';
+				break;
+			case "tex":
+				return 'latex';
+				break;
+			case "lisp":
+			case "lsp":
+				return 'lisp';
+				break;
+			case "lols":
+			case "lol":
+				return 'lolcode';
+				break;
+			case "lsx":
+				return 'lotusscript';
+				break;
+			case "lscript":
+				return 'lscript';
+				break;
+			case "lua":
+				return 'lua';
+				break;
+			case "makefile":
+			case "make":
+				return 'make';
+				break;
+			case "mrc":
+				return 'mirc';
+				break;
+			case "mxml":
+				return 'mxml';
 				break;
 			case "mysql":
 				return 'mysql';
+				break;
+			case "nsh":
+			case "nsi":
+				return 'nsis';
+				break;
+			case "cma":
+				return 'ocaml';
+				break;
+			case "p":
+				return 'pascal';
 				break;
 			case "pl":
 				return 'perl';
 				break;
 			case "php":
+			case "php4":
+			case "php5":
+			case "phps":
 				return 'php';
+				break;
+			case "pbk":
+				return 'pixelbender';
+				break;
+			case "pl":
+				return 'plsql';
+				break;
+			case "pov":
+				return 'povray';
+				break;
+			case "ps":
+				return 'powershell';
+				break;
+			case "pl":
+				return 'prolog';
+				break;
+			case "pvx":
+				return 'providex';
 				break;
 			case "py":
 				return 'python';
 				break;
+			case "qbasic":
+				return 'qbasic';
+				break;
 			case "rb":
+			case "ruby":
 				return 'ruby';
+				break;
+			case "sas":
+				return 'sas';
+				break;
+			case "sas":
+				return 'scala';
+				break;
+			case "scm":
+				return 'scheme';
+				break;
+			case "sce":
+				return 'scilab';
+				break;
+			case "st":
+				return 'smalltalk';
 				break;
 			case "sql":
 				return 'sql';
 				break;
+			case "tk":
+			case "tcl":
+			case "tclx":
+				return 'tcl';
+				break;
+			case "tbasic":
+				return 'thinbasic';
+				break;
+			case "typo3":
+				return 'typoscript';
+				break;
+			case "idl":
+				return 'idl';
+				break;
+			case "vb":
+				return 'vbnet';
+				break;
+			case "v":
+				return 'verilog';
+				break;
+			case "vhdl":
+				return 'vhdl';
+				break;
+			case "vim":
+				return 'vim';
+				break;
+			case "wbt":
+				return 'winbatch';
+				break;
+			case "reg":
+				return 'reg';
+				break;
 			case "xml":
 				return 'xml';
 				break;
+			case "x++":
+				return 'xpp';
+				break;
 			case "vbs":
-				return 'vbscript';
+				return 'vb';
 				break;
 			default:
 				return false;
@@ -202,7 +478,7 @@ class db_code extends db_file
 				
 			$fileinfo['lines'] = join("\n", $lines);
 			
-			$lang = self::getLanguage(getExt(basename($file)));
+			$lang = self::getLanguage(basename($file));
 			if($lang !== false && $lines != '')
 			{
 				$fileinfo['Language'] = $lang;
@@ -221,9 +497,9 @@ class db_code extends db_file
 		$fileinfo = array();
 		if($lang !== '' && $lines != '')
 		{
-			$highlighter = Text_Highlighter::factory($lang);
+			$geshi = new GeSHi($lines, $lang);
 			
-			$fileinfo['HTML'] = addslashes($highlighter->highlight($lines));
+			$fileinfo['HTML'] = addslashes($geshi->parse_code());
 		}
 		else
 		{
@@ -234,7 +510,7 @@ class db_code extends db_file
 
 	static function add($file, $code_id = NULL)
 	{
-		if(!class_exists('Text_Highlighter'))
+		if(!class_exists('GeSHi'))
 			self::init();
 			
 		// pull information from $info
