@@ -187,23 +187,24 @@ body {
 	border-color:#88BBDD #66AACC #5599BB;
 	border-style:solid;
 	border-width:1px;
-	padding-bottom:6px;
+	padding-bottom:5px;
 	padding-top:3px;
 }
 
 .innerSearchBorder {
 	background-color:#FFFFFF;
-	border-color:#446688 #335588 #115577;
 	border-style:solid;
 	border-width:1px;
-	padding-bottom:5px;
+	padding-bottom:4px;
 	padding-top:2px;
 }
 
 #searchInput {
+	margin:0px;
+	border:0px;
 	border-right:1px solid #8F8F8F;
 	border-style:none solid none none;
-	padding-bottom:4px;
+	padding-bottom:3px;
 	padding-left:2px;
 	padding-top:3px;
 	width:21em;
@@ -220,11 +221,12 @@ body {
 }
 
 .buttonBorder {
-	border-color:#CFE3C4 #99C383 #5DA253;
+	border-color:#CFE3C4 #99C383 #5DA253 #99C383;
 	border-style:solid;
 	border-width:1px;
-	padding-bottom:4px;
+	padding-bottom:3px;
 	padding-top:1px;
+	background-color:#307C0B;
 }
 
 #searchButton {
@@ -242,7 +244,7 @@ body {
 	border:medium none;
 	color:#FFFFFF;
 	margin:0;
-	padding-bottom:2px;
+	padding-bottom:1px;
 	padding-top:1px;
 }
 
